objects/Demo_Scoping_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addtl_Assigned_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An additional assignee for this Demo Request</inlineHelpText>
        <label>Addtl Assigned 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addtl_Assigned_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An additional assignee for this demo request</inlineHelpText>
        <label>Addtl Assigned 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addtl_Assigned_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An additional individual assigned to this demo request</inlineHelpText>
        <label>Addtl Assigned 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Notes__c</fullName>
        <inlineHelpText>Please enter any notes regarding the assignments for this Demo Request.</inlineHelpText>
        <label>Assigned Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Scoping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned Scoping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The primary individual this assigned to respond to this Demo Request.</inlineHelpText>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attended_Onsite__c</fullName>
        <inlineHelpText>Indicate whether PS/TSE Demo Assistance was provided onsite.  Required if "Requested Demo Assistance Onsite" is checked and Demo Status equals "Demo Completed."</inlineHelpText>
        <label>Attended Onsite?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>Please select the competitor(s) this potential client is known to be considering that compete with our offering.</inlineHelpText>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
                <value>
                    <fullName>Etouches</fullName>
                </value>
                <value>
                    <fullName>Nexus</fullName>
                </value>
                <value>
                    <fullName>Sabre</fullName>
                </value>
                <value>
                    <fullName>TMC</fullName>
                </value>
                <value>
                    <fullName>In-house technology</fullName>
                </value>
                <value>
                    <fullName>Manual Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ABC Connection</fullName>
                </value>
                <value>
                    <fullName>Attendigy</fullName>
                </value>
                <value>
                    <fullName>Cendyn</fullName>
                </value>
                <value>
                    <fullName>Core Apps</fullName>
                </value>
                <value>
                    <fullName>Constant Contact</fullName>
                </value>
                <value>
                    <fullName>Double Dutch</fullName>
                </value>
                <value>
                    <fullName>Event Base</fullName>
                </value>
                <value>
                    <fullName>Eventbrite</fullName>
                </value>
                <value>
                    <fullName>Event Mobi</fullName>
                </value>
                <value>
                    <fullName>Event Planner Pro</fullName>
                </value>
                <value>
                    <fullName>Experient</fullName>
                </value>
                <value>
                    <fullName>Gather Digital</fullName>
                </value>
                <value>
                    <fullName>Groupize</fullName>
                </value>
                <value>
                    <fullName>Guidebook</fullName>
                </value>
                <value>
                    <fullName>ITN</fullName>
                </value>
                <value>
                    <fullName>Lodging Logistics</fullName>
                </value>
                <value>
                    <fullName>onPeak GES</fullName>
                </value>
                <value>
                    <fullName>Pegasus</fullName>
                </value>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
                <value>
                    <fullName>Rainfocus</fullName>
                </value>
                <value>
                    <fullName>Sherpa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <defaultValue>"New"</defaultValue>
        <inlineHelpText>The current status of this Demo Request.</inlineHelpText>
        <label>Demo Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Demo Requested</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Demo Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Notification_Type__c</fullName>
        <formula>IF(RecordType.Name = "Demo + Scoping", "Demo - ", "Scoping - ") + TEXT(Specific_Product_Interest__c) + " - " + TEXT(Type_of_Sale__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email: Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Onsite_Demo_Text__c</fullName>
        <formula>IF( Request_Demo_Assistance_Onsite__c, 
"Yes - onsite demo assistance requested in " + Onsite_Demo_Location_City_State__c + ". Justification: " + Onsite_Demo_Justification__c, "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email: Onsite Demo Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Onsite_Scoping_Text__c</fullName>
        <formula>IF( Request_Scoping_Assistance_Onsite__c,
    "Yes - onsite Scoping requested in " + Onsite_Scoping_Location_City_State__c + ".  Justification: " + Onsite_Scoping_Justification__c, "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email: Onsite Scoping Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opp_Owner_Name__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email: Opp Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Scoping_Demo_Status__c</fullName>
        <formula>IF(RecordType.Name = "Post-Demo Scoping", TEXT(Demo_Status__c),
    IF(RecordType.Name = "Scoping Only", "Scoping only - no demo", ""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email: Scoping Demo Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_required__c</fullName>
        <defaultValue>"No"</defaultValue>
        <inlineHelpText>Defaults to no.  Only selectable when Demo Status is "Demo Completed" or "Closed-Incomplete."  Select Yes to notify PS that follow up is required on this Scoping Request.</inlineHelpText>
        <label>Follow-up required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Demo Request Sent</fullName>
                </value>
                <value>
                    <fullName>Scoping Request Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <formula>TEXT(Opportunity__r.ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Forecast Category of the related Opportunity</inlineHelpText>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Demo_Justification__c</fullName>
        <inlineHelpText>Please enter a brief justification for the onsite requirement for this demo if "Request Demo Assistance Onsite" is checked.</inlineHelpText>
        <label>Onsite Demo Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Demo_Location_City_State__c</fullName>
        <inlineHelpText>Please enter the city and state (or country) of the onsite demo if "Request Demo Assistance Onsite?" has been checked.</inlineHelpText>
        <label>Onsite Demo Location (City, State)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Scoping_Justification__c</fullName>
        <inlineHelpText>Please enter a brief justification for the onsite requirement for scoping if "Request Scoping Assistance Onsite" is checked.</inlineHelpText>
        <label>Onsite Scoping Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onsite_Scoping_Location_City_State__c</fullName>
        <inlineHelpText>Please enter the city and state (or country) for onsite scoping if "Request Scoping Assistance Onsite?" has been checked.</inlineHelpText>
        <label>Onsite Scoping Location (City, State)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current anticipated Close Date of the related Opportunity</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK("/" &amp; Opportunity__r.OwnerId, Opportunity__r.Owner.FirstName &amp; " " &amp; Opportunity__r.Owner.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The owner of the related Opportunity record</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opportunity this Demo/Scoping Request was created in relation to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PS/TSE Demo/Scoping Requests</relationshipLabel>
        <relationshipName>PS_TSE_Demo_Scoping_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Type__c</fullName>
        <formula>TEXT(  Opportunity__r.Order_Sub_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Order Sub Type of the related Opportunity</inlineHelpText>
        <label>Order Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Demo_Agenda__c</fullName>
        <inlineHelpText>Please enter a preliminary agenda for this demo here.</inlineHelpText>
        <label>Preliminary Demo Agenda</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Reviewer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The primary individual assigned to review this Scoping Request</inlineHelpText>
        <label>Primary Reviewer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Reviewer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The second individual assigned to review this Scoping Request</inlineHelpText>
        <label>Primary Reviewer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Reviewer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The third individual assigned to review this Scoping Request</inlineHelpText>
        <label>Primary Reviewer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_TSE_Demo_Scoping_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interest_from_Opp__c</fullName>
        <formula>TEXT(Opportunity__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The value from the related Opportunity's "Product" picklist field</inlineHelpText>
        <label>Product Interest (from Opp)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Demo_Assistance_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if you are requesting onsite presence to assist with the demo.</inlineHelpText>
        <label>Request Demo Assistance Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <inlineHelpText>Specific details about this request.  Please be descriptive.</inlineHelpText>
        <label>Request Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Scoping_Assistance_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox if you are requesting onsite PSE/TSE presence to assist with scoping.</inlineHelpText>
        <label>Request Scoping Assistance Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Demo_Date_1__c</fullName>
        <inlineHelpText>The first requested date for this demo.</inlineHelpText>
        <label>Requested Demo Date #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Demo_Date_2__c</fullName>
        <inlineHelpText>The second requested date for this demo.</inlineHelpText>
        <label>Requested Demo Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Demo_Date_3__c</fullName>
        <inlineHelpText>The third requested date for this demo.</inlineHelpText>
        <label>Requested Demo Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Demo_Time_1__c</fullName>
        <inlineHelpText>The preferred demo time for the first requested demo date</inlineHelpText>
        <label>Requested Demo Time #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Demo_Time_2__c</fullName>
        <inlineHelpText>The preferred demo time for the second requested demo date</inlineHelpText>
        <label>Requested Demo Time #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Demo_Time_3__c</fullName>
        <inlineHelpText>The preferred demo time for the third requested demo date.</inlineHelpText>
        <label>Requested Demo Time #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Demo_Time_Zone__c</fullName>
        <inlineHelpText>Please select the preferred Time Zone for the demo.  Time Zones are sorted by their DST Offset (e.g. +0 for GMT/London, +2 for Central Europe, -5 for US Eastern Standard)</inlineHelpText>
        <label>Requested Demo Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMT–11:00 - Samoa Standard Time (Pacific/Pago_Pago)</fullName>
                </value>
                <value>
                    <fullName>GMT–10:00 - Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
                </value>
                <value>
                    <fullName>GMT–09:00 - Hawaii-Aleutian Standard Time (America/Adak)</fullName>
                </value>
                <value>
                    <fullName>GMT–08:00 - Alaska Daylight Time (America/Anchorage)</fullName>
                </value>
                <value>
                    <fullName>GMT–07:00 - Pacific Daylight Time (America/Los_Angeles)</fullName>
                </value>
                <value>
                    <fullName>GMT–07:00 - Mountain Standard Time (America/Phoenix)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Mountain Standard Time (America/Mazatlan)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Mountain Daylight Time (America/Denver)</fullName>
                </value>
                <value>
                    <fullName>GMT–06:00 - Central Standard Time (America/El_Salvador)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Peru Time (America/Lima)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Eastern Standard Time (America/Panama)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Colombia Time (America/Bogota)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Central Daylight Time (America/Mexico_City)</fullName>
                </value>
                <value>
                    <fullName>GMT–05:00 - Central Daylight Time (America/Chicago)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Eastern Daylight Time (America/New_York)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Eastern Daylight Time (America/Indiana/Indianapolis)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Atlantic Standard Time (America/Puerto_Rico)</fullName>
                </value>
                <value>
                    <fullName>GMT–04:00 - Atlantic Daylight Time (Atlantic/Bermuda)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Chile Summer Time (America/Santiago)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Brasilia Summer Time (America/Sao_Paulo)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Atlantic Daylight Time (America/Halifax)</fullName>
                </value>
                <value>
                    <fullName>GMT–03:00 - Argentina Time (America/Argentina/Buenos_Aires)</fullName>
                </value>
                <value>
                    <fullName>GMT–02:00 - South Georgia Standard Time (Atlantic/South_Georgia)</fullName>
                </value>
                <value>
                    <fullName>GMT–01:00 - Cape Verde Time (Atlantic/Cape_Verde)</fullName>
                </value>
                <value>
                    <fullName>GMT+00:00 - Greenwich Mean Time (GMT)</fullName>
                </value>
                <value>
                    <fullName>GMT+01:00 - British Summer Time (Europe/London)</fullName>
                </value>
                <value>
                    <fullName>GMT+02:00 - Central European Summer Time (Europe/Rome)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Arabia Standard Time (Asia/Baghdad)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Moscow Standard Time (Europe/Moscow)</fullName>
                </value>
                <value>
                    <fullName>GMT+03:00 - Eastern European Summer Time (Africa/Cairo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Date_1__c</fullName>
        <inlineHelpText>The first preferred date for Scoping.</inlineHelpText>
        <label>Requested Scoping Date #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Date_2__c</fullName>
        <inlineHelpText>The second preferred date for Scoping.</inlineHelpText>
        <label>Requested Scoping Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Scoping_Date_3__c</fullName>
        <inlineHelpText>The third preferred date for Scoping.</inlineHelpText>
        <label>Requested Scoping Date #3</label>
        <type>Date</type>
    </fields>
</CustomObject>